fix firefox overflow bug

--- a/coverflow.css
+++ b/coverflow.css
@@ -16,8 +16,9 @@
 
 .coverflow .coverflow-wrap {
 	position: absolute;
-	left: 50%;
-	top: 50%;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 .coverflow .coverflow-wrap,
